--- a/404.html
+++ b/404.html
@@ -6,13 +6,36 @@
     <title>Stackly | Page Not Found</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 fontFamily: { sans: ['"Plus Jakarta Sans"', 'sans-serif'] },
                 extend: { colors: { primary: '#4F46E5', dark: '#0F172A' } }
             }
+        }
+    </script>
+    <script>
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) document.documentElement.classList.add('dark');
+        else document.documentElement.classList.remove('dark');
+        if (localStorage.dir === 'rtl') document.documentElement.setAttribute('dir', 'rtl');
+        else document.documentElement.setAttribute('dir', 'ltr');
+
+        function toggleTheme() {
+            if (document.documentElement.classList.contains('dark')) {
+                document.documentElement.classList.remove('dark');
+                localStorage.setItem('theme', 'light');
+            } else {
+                document.documentElement.classList.add('dark');
+                localStorage.setItem('theme', 'dark');
+            }
+        }
+        function toggleRTL() {
+            const html = document.documentElement;
+            if (html.getAttribute('dir') === 'rtl') { html.setAttribute('dir', 'ltr'); localStorage.setItem('dir', 'ltr'); }
+            else { html.setAttribute('dir', 'rtl'); localStorage.setItem('dir', 'rtl'); }
         }
     </script>
     <style>
@@ -30,34 +53,133 @@
         }
     </style>
 </head>
-<body class="bg-gray-50 h-screen flex flex-col items-center justify-center overflow-hidden text-slate-600">
+<body class="bg-gray-50 text-slate-600 font-sans antialiased flex flex-col min-h-screen dark:bg-slate-900 dark:text-gray-300" x-data="{ mobileMenuOpen: false }">
 
-    <div class="text-center px-4 max-w-lg">
-        
-        <div class="relative w-64 h-64 mx-auto mb-8">
-            <div class="float-box relative z-10 w-full h-full bg-white rounded-3xl shadow-2xl border border-gray-100 flex items-center justify-center">
-                <i class="ph ph-package text-8xl text-indigo-200"></i>
-                <div class="absolute -top-6 -right-6 w-20 h-20 bg-red-50 rounded-2xl border border-red-100 flex items-center justify-center text-red-500 font-extrabold text-2xl shadow-lg rotate-12">
-                    404
+    <nav class="fixed w-full z-50 bg-white/90 backdrop-blur border-b border-gray-100 dark:bg-slate-900/90 dark:border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center h-20">
+                <a href="index.html" class="flex items-center gap-2">
+                    <div class="w-10 h-10 rounded-xl bg-primary flex items-center justify-center text-white font-bold text-xl">S</div>
+                    <span class="font-bold text-2xl text-slate-900 dark:text-white">Stackly.</span>
+                </a>
+
+                <div class="hidden md:flex items-center gap-8">
+                    <div class="relative group">
+                        <button class="flex items-center gap-1 text-sm font-bold text-primary focus:outline-none">
+                            Home <i class="ph ph-caret-down"></i>
+                        </button>
+                        <div class="absolute top-full left-0 w-40 bg-white border border-gray-100 rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all transform translate-y-2 group-hover:translate-y-0 dark:bg-slate-800 dark:border-slate-700">
+                            <a href="index.html" class="block px-4 py-3 text-sm font-medium hover:bg-gray-50 rounded-t-xl dark:text-gray-300 dark:hover:bg-slate-700">Home Style 1</a>
+                            <a href="home-2.html" class="block px-4 py-3 text-sm font-medium hover:bg-gray-50 rounded-b-xl dark:text-gray-300 dark:hover:bg-slate-700">Home Style 2</a>
+                        </div>
+                    </div>
+                    <a href="services.html" class="text-sm font-medium hover:text-primary transition">Services</a>
+                    <a href="pricing.html" class="text-sm font-medium hover:text-primary transition">Pricing</a>
+                    <a href="contact.html" class="text-sm font-medium hover:text-primary transition">Contact</a>
+                </div>
+
+                <div class="hidden md:flex items-center gap-4">
+                    <button onclick="toggleTheme()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition" title="Toggle Theme">
+                        <i class="ph ph-moon dark:hidden"></i>
+                        <i class="ph ph-sun hidden dark:inline"></i>
+                    </button>
+                    <button onclick="toggleRTL()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition" title="Toggle RTL">
+                        <i class="ph ph-translate"></i>
+                    </button>
+                    <div class="h-6 w-px bg-gray-200 dark:bg-slate-700"></div>
+                    <a href="auth.html" class="text-sm font-bold hover:text-primary dark:text-white">Log In</a>
+                    <a href="auth.html" class="px-5 py-2.5 rounded-full bg-primary text-white text-sm font-bold hover:bg-indigo-600 transition shadow-lg shadow-indigo-500/30">Get Started</a>
+                </div>
+
+                <button @click="mobileMenuOpen = !mobileMenuOpen" class="md:hidden text-2xl dark:text-white">
+                    <i class="ph ph-list"></i>
+                </button>
+            </div>
+        </div>
+
+        <div x-show="mobileMenuOpen" class="md:hidden bg-white border-b border-gray-100 p-4 dark:bg-slate-800 dark:border-slate-700">
+            <a href="index.html" class="block py-2 font-bold text-primary">Home 1</a>
+            <a href="home-2.html" class="block py-2 font-medium dark:text-gray-300">Home 2</a>
+            <a href="services.html" class="block py-2 font-medium dark:text-gray-300">Services</a>
+            <a href="pricing.html" class="block py-2 font-medium dark:text-gray-300">Pricing</a>
+            <div class="flex gap-4 mt-4 border-t border-gray-100 pt-4 dark:border-slate-700">
+                <button onclick="toggleTheme()" class="text-sm font-bold flex items-center gap-2 dark:text-white"><i class="ph ph-moon"></i> Theme</button>
+                <button onclick="toggleRTL()" class="text-sm font-bold flex items-center gap-2 dark:text-white"><i class="ph ph-translate"></i> RTL</button>
+            </div>
+        </div>
+    </nav>
+
+    <main class="flex-grow flex items-center justify-center pt-24 pb-12">
+        <div class="text-center px-4 max-w-lg">
+            
+            <div class="relative w-64 h-64 mx-auto mb-8">
+                <div class="float-box relative z-10 w-full h-full bg-white rounded-3xl shadow-2xl border border-gray-100 flex items-center justify-center dark:bg-slate-800 dark:border-slate-700">
+                    <i class="ph ph-package text-8xl text-indigo-200 dark:text-indigo-400"></i>
+                    <div class="absolute -top-6 -right-6 w-20 h-20 bg-red-50 rounded-2xl border border-red-100 flex items-center justify-center text-red-500 font-extrabold text-2xl shadow-lg rotate-12 dark:bg-red-900/20 dark:border-red-800 dark:text-red-400">
+                        404
+                    </div>
+                </div>
+                <div class="shadow-blob absolute -bottom-10 left-1/2 -translate-x-1/2 w-40 h-4 bg-black rounded-[100%] blur-md dark:bg-white/20"></div>
+            </div>
+
+            <h1 class="text-4xl font-extrabold text-slate-900 mb-4 dark:text-white">Lost in transit?</h1>
+            <p class="text-lg text-slate-500 mb-10 dark:text-gray-400">
+                The page you are looking for has been moved, removed, or never existed. It looks like this box arrived empty.
+            </p>
+
+            <div class="flex flex-col sm:flex-row gap-4 justify-center">
+                <a href="index.html" class="px-8 py-3.5 bg-primary text-white font-bold rounded-xl hover:bg-indigo-700 transition shadow-lg shadow-indigo-200 flex items-center justify-center gap-2 transform hover:-translate-y-1 dark:shadow-none">
+                    <i class="ph ph-house text-lg"></i> Go Home
+                </a>
+                <a href="contact.html" class="px-8 py-3.5 bg-white border border-gray-200 text-slate-700 font-bold rounded-xl hover:bg-gray-50 transition flex items-center justify-center gap-2 dark:bg-slate-800 dark:border-slate-700 dark:text-white dark:hover:bg-slate-700">
+                    <i class="ph ph-life-buoy text-lg"></i> Help Center
+                </a>
+            </div>
+        </div>
+    </main>
+
+    <footer class="bg-slate-900 text-white pt-16 pb-8 border-t border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-12 mb-12">
+                <div class="col-span-2 md:col-span-1">
+                    <span class="text-2xl font-bold tracking-tight">Stackly.</span>
+                    <p class="mt-4 text-slate-400 text-sm">Curating joy, one box at a time.</p>
+                    <p class="mt-4 text-xs text-slate-500 font-mono">Powered by ASR</p>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Product</h4>
+                    <ul class="space-y-2 text-sm text-slate-300">
+                        <li><a href="services.html" class="hover:text-white">Services</a></li>
+                        <li><a href="pricing.html" class="hover:text-white">Pricing</a></li>
+                        <li><a href="auth.html" class="hover:text-white">Login</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Company</h4>
+                    <ul class="space-y-2 text-sm text-slate-300">
+                        <li><a href="about.html" class="hover:text-white">About Us</a></li>
+                        <li><a href="contact.html" class="hover:text-white">Contact</a></li>
+                        <li><a href="blog.html" class="hover:text-white">Blog</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Support</h4>
+                    <ul class="space-y-2 text-sm text-slate-300">
+                        <li><a href="contact.html" class="hover:text-white">Help Center</a></li>
+                        <li><a href="terms.html" class="hover:text-white">Terms</a></li>
+                        <li><a href="privacy.html" class="hover:text-white">Privacy</a></li>
+                    </ul>
                 </div>
             </div>
-            <div class="shadow-blob absolute -bottom-10 left-1/2 -translate-x-1/2 w-40 h-4 bg-black rounded-[100%] blur-md"></div>
+            <div class="border-t border-slate-800 pt-8 flex justify-between items-center text-sm text-slate-500">
+                <p>&copy; 2026 Stackly Inc. All rights reserved.</p>
+                <div class="flex gap-4">
+                    <i class="ph ph-twitter-logo text-lg cursor-pointer hover:text-white"></i>
+                    <i class="ph ph-instagram-logo text-lg cursor-pointer hover:text-white"></i>
+                </div>
+            </div>
         </div>
-
-        <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Lost in transit?</h1>
-        <p class="text-lg text-slate-500 mb-10">
-            The page you are looking for has been moved, removed, or never existed. It looks like this box arrived empty.
-        </p>
-
-        <div class="flex flex-col sm:flex-row gap-4 justify-center">
-            <a href="index.html" class="px-8 py-3.5 bg-primary text-white font-bold rounded-xl hover:bg-indigo-700 transition shadow-lg shadow-indigo-200 flex items-center justify-center gap-2 transform hover:-translate-y-1">
-                <i class="ph ph-house text-lg"></i> Go Home
-            </a>
-            <a href="contact.html" class="px-8 py-3.5 bg-white border border-gray-200 text-slate-700 font-bold rounded-xl hover:bg-gray-50 transition flex items-center justify-center gap-2">
-                <i class="ph ph-life-buoy text-lg"></i> Help Center
-            </a>
-        </div>
-    </div>
+    </footer>
 
 </body>
 </html>
