--- a/terms.html
+++ b/terms.html
@@ -6,9 +6,11 @@
     <title>Stackly | Terms of Service</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
+            darkMode: 'class',
             theme: {
                 fontFamily: {
                     sans: ['"Plus Jakarta Sans"', 'sans-serif'],
@@ -18,57 +20,123 @@
             }
         }
     </script>
-</head>
-<body class="bg-gray-50 text-slate-600">
+    <script>
+        if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) document.documentElement.classList.add('dark');
+        else document.documentElement.classList.remove('dark');
+        if (localStorage.dir === 'rtl') document.documentElement.setAttribute('dir', 'rtl');
+        else document.documentElement.setAttribute('dir', 'ltr');
 
-    <nav class="bg-white border-b border-gray-200 sticky top-0 z-50">
-        <div class="max-w-5xl mx-auto px-6 h-20 flex items-center justify-between">
-            <a href="index.html" class="font-bold text-2xl text-slate-900">Stackly.</a>
-            <a href="index.html" class="text-sm font-medium hover:text-primary">Back to Home</a>
+        function toggleTheme() {
+            if (document.documentElement.classList.contains('dark')) {
+                document.documentElement.classList.remove('dark');
+                localStorage.setItem('theme', 'light');
+            } else {
+                document.documentElement.classList.add('dark');
+                localStorage.setItem('theme', 'dark');
+            }
+        }
+        function toggleRTL() {
+            const html = document.documentElement;
+            if (html.getAttribute('dir') === 'rtl') { html.setAttribute('dir', 'ltr'); localStorage.setItem('dir', 'ltr'); }
+            else { html.setAttribute('dir', 'rtl'); localStorage.setItem('dir', 'rtl'); }
+        }
+    </script>
+</head>
+<body class="bg-gray-50 text-slate-600 dark:bg-slate-900 dark:text-gray-300" x-data="{ mobileMenuOpen: false }">
+
+    <nav class="fixed w-full z-50 bg-white/90 backdrop-blur border-b border-gray-100 dark:bg-slate-900/90 dark:border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="flex justify-between items-center h-20">
+                <a href="index.html" class="flex items-center gap-2">
+                    <div class="w-10 h-10 rounded-xl bg-primary flex items-center justify-center text-white font-bold text-xl">S</div>
+                    <span class="font-bold text-2xl text-slate-900 dark:text-white">Stackly.</span>
+                </a>
+
+                <div class="hidden md:flex items-center gap-8">
+                    <div class="relative group">
+                        <button class="flex items-center gap-1 text-sm font-bold text-primary focus:outline-none">
+                            Home <i class="ph ph-caret-down"></i>
+                        </button>
+                        <div class="absolute top-full left-0 w-40 bg-white border border-gray-100 rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all transform translate-y-2 group-hover:translate-y-0 dark:bg-slate-800 dark:border-slate-700">
+                            <a href="index.html" class="block px-4 py-3 text-sm font-medium hover:bg-gray-50 rounded-t-xl dark:text-gray-300 dark:hover:bg-slate-700">Home Style 1</a>
+                            <a href="home-2.html" class="block px-4 py-3 text-sm font-medium hover:bg-gray-50 rounded-b-xl dark:text-gray-300 dark:hover:bg-slate-700">Home Style 2</a>
+                        </div>
+                    </div>
+                    <a href="services.html" class="text-sm font-medium hover:text-primary transition">Services</a>
+                    <a href="pricing.html" class="text-sm font-medium hover:text-primary transition">Pricing</a>
+                    <a href="contact.html" class="text-sm font-medium hover:text-primary transition">Contact</a>
+                </div>
+
+                <div class="hidden md:flex items-center gap-4">
+                    <button onclick="toggleTheme()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition" title="Toggle Theme">
+                        <i class="ph ph-moon dark:hidden"></i>
+                        <i class="ph ph-sun hidden dark:inline"></i>
+                    </button>
+                    <button onclick="toggleRTL()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition" title="Toggle RTL">
+                        <i class="ph ph-translate"></i>
+                    </button>
+                    <div class="h-6 w-px bg-gray-200 dark:bg-slate-700"></div>
+                    <a href="auth.html" class="text-sm font-bold hover:text-primary dark:text-white">Log In</a>
+                    <a href="auth.html" class="px-5 py-2.5 rounded-full bg-primary text-white text-sm font-bold hover:bg-indigo-600 transition shadow-lg shadow-indigo-500/30">Get Started</a>
+                </div>
+
+                <button @click="mobileMenuOpen = !mobileMenuOpen" class="md:hidden text-2xl dark:text-white"><i class="ph ph-list"></i></button>
+            </div>
+        </div>
+
+        <div x-show="mobileMenuOpen" class="md:hidden bg-white border-b border-gray-100 p-4 dark:bg-slate-800 dark:border-slate-700">
+            <a href="index.html" class="block py-2 font-bold text-primary">Home 1</a>
+            <a href="home-2.html" class="block py-2 font-medium dark:text-gray-300">Home 2</a>
+            <a href="services.html" class="block py-2 font-medium dark:text-gray-300">Services</a>
+            <a href="pricing.html" class="block py-2 font-medium dark:text-gray-300">Pricing</a>
+            <div class="flex gap-4 mt-4 border-t border-gray-100 pt-4 dark:border-slate-700">
+                <button onclick="toggleTheme()" class="text-sm font-bold flex items-center gap-2 dark:text-white"><i class="ph ph-moon"></i> Theme</button>
+                <button onclick="toggleRTL()" class="text-sm font-bold flex items-center gap-2 dark:text-white"><i class="ph ph-translate"></i> RTL</button>
+            </div>
         </div>
     </nav>
 
-    <div class="max-w-5xl mx-auto px-6 py-16 grid grid-cols-1 md:grid-cols-12 gap-12">
+    <div class="max-w-5xl mx-auto px-6 py-32 grid grid-cols-1 md:grid-cols-12 gap-12">
         
         <aside class="md:col-span-3 hidden md:block">
             <div class="sticky top-32">
-                <h3 class="font-bold text-slate-900 mb-4 uppercase tracking-wider text-xs">Table of Contents</h3>
-                <ul class="space-y-3 text-sm border-l border-gray-200 pl-4">
+                <h3 class="font-bold text-slate-900 mb-4 uppercase tracking-wider text-xs dark:text-white">Table of Contents</h3>
+                <ul class="space-y-3 text-sm border-l border-gray-200 pl-4 dark:border-slate-700">
                     <li><a href="#acceptance" class="text-primary font-bold border-l-2 border-primary -ml-[18px] pl-4 block">1. Acceptance</a></li>
-                    <li><a href="#subscriptions" class="text-gray-500 hover:text-slate-900 block">2. Subscriptions</a></li>
-                    <li><a href="#shipping" class="text-gray-500 hover:text-slate-900 block">3. Shipping & Returns</a></li>
-                    <li><a href="#cancellation" class="text-gray-500 hover:text-slate-900 block">4. Cancellation</a></li>
-                    <li><a href="#liability" class="text-gray-500 hover:text-slate-900 block">5. Liability</a></li>
+                    <li><a href="#subscriptions" class="text-gray-500 hover:text-slate-900 block dark:text-gray-400 dark:hover:text-white">2. Subscriptions</a></li>
+                    <li><a href="#shipping" class="text-gray-500 hover:text-slate-900 block dark:text-gray-400 dark:hover:text-white">3. Shipping & Returns</a></li>
+                    <li><a href="#cancellation" class="text-gray-500 hover:text-slate-900 block dark:text-gray-400 dark:hover:text-white">4. Cancellation</a></li>
+                    <li><a href="#liability" class="text-gray-500 hover:text-slate-900 block dark:text-gray-400 dark:hover:text-white">5. Liability</a></li>
                 </ul>
             </div>
         </aside>
 
         <main class="md:col-span-9">
             <div class="mb-8">
-                <h1 class="text-4xl font-extrabold text-slate-900 mb-4">Terms of Service</h1>
-                <p class="text-gray-500 bg-gray-100 px-3 py-1 rounded inline-block text-sm">Last Updated: October 1, 2024</p>
+                <h1 class="text-4xl font-extrabold text-slate-900 mb-4 dark:text-white">Terms of Service</h1>
+                <p class="text-gray-500 bg-gray-100 px-3 py-1 rounded inline-block text-sm dark:bg-slate-800 dark:text-gray-400">Last Updated: October 1, 2026</p>
             </div>
 
-            <article class="prose prose-lg prose-indigo text-gray-600 font-serif max-w-none">
+            <article class="prose prose-lg prose-indigo text-gray-600 font-serif max-w-none dark:text-gray-300 dark:prose-invert">
                 <p>Welcome to Stackly. Please read these Terms of Service ("Terms") carefully before using the Stackly website or subscribing to our services.</p>
 
-                <h3 id="acceptance" class="font-sans text-slate-900 font-bold mt-10">1. Acceptance of Terms</h3>
+                <h3 id="acceptance" class="font-sans text-slate-900 font-bold mt-10 dark:text-white">1. Acceptance of Terms</h3>
                 <p>By accessing or using any part of the site, you agree to be bound by these Terms. If you do not agree to all the terms and conditions of this agreement, then you may not access the website or use any services.</p>
 
-                <h3 id="subscriptions" class="font-sans text-slate-900 font-bold mt-10">2. Subscription & Billing</h3>
+                <h3 id="subscriptions" class="font-sans text-slate-900 font-bold mt-10 dark:text-white">2. Subscription & Billing</h3>
                 <p><strong>2.1 Recurring Billing.</strong> By starting a subscription, you authorize us to charge you a recurring monthly or annual subscription fee at the then-current rate.</p>
                 <p><strong>2.2 Payment Methods.</strong> You must provide a current, valid, accepted method of payment. We may update your payment method using information provided by payment service providers.</p>
 
-                <h3 id="shipping" class="font-sans text-slate-900 font-bold mt-10">3. Shipping & Returns</h3>
+                <h3 id="shipping" class="font-sans text-slate-900 font-bold mt-10 dark:text-white">3. Shipping & Returns</h3>
                 <p>We ship boxes on the 15th of every month. Delivery times vary by location. If you receive a damaged item, you must notify us within 14 days of receipt to be eligible for a replacement.</p>
 
-                <h3 id="cancellation" class="font-sans text-slate-900 font-bold mt-10">4. Cancellation Policy</h3>
+                <h3 id="cancellation" class="font-sans text-slate-900 font-bold mt-10 dark:text-white">4. Cancellation Policy</h3>
                 <p>You may cancel your subscription at any time via your Account Dashboard. Cancellations made after the 1st of the month will go into effect for the following month's billing cycle.</p>
 
-                <h3 id="liability" class="font-sans text-slate-900 font-bold mt-10">5. Limitation of Liability</h3>
+                <h3 id="liability" class="font-sans text-slate-900 font-bold mt-10 dark:text-white">5. Limitation of Liability</h3>
                 <p>In no case shall Stackly, our directors, officers, employees, affiliates, agents, contractors, interns, suppliers, service providers or licensors be liable for any injury, loss, claim, or any direct, indirect, incidental, punitive, special, or consequential damages of any kind.</p>
 
-                <hr class="my-10 border-gray-200">
+                <hr class="my-10 border-gray-200 dark:border-slate-700">
 
                 <p class="text-sm">Questions about the Terms of Service should be sent to us at <a href="mailto:legal@stackly.com" class="text-primary font-sans font-bold no-underline">legal@stackly.com</a>.</p>
             </article>
@@ -76,8 +144,47 @@
 
     </div>
 
-    <footer class="bg-white border-t border-gray-200 py-8 text-center text-sm text-gray-500">
-        &copy; 2024 Stackly Inc. All rights reserved.
+    <footer class="bg-slate-900 text-white pt-16 pb-8 border-t border-slate-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-12 mb-12">
+                <div class="col-span-2 md:col-span-1">
+                    <span class="text-2xl font-bold tracking-tight">Stackly.</span>
+                    <p class="mt-4 text-slate-400 text-sm">Curating joy, one box at a time.</p>
+                    <p class="mt-4 text-xs text-slate-500 font-mono">Powered by ASR</p>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Product</h4>
+                    <ul class="space-y-2 text-sm text-slate-300">
+                        <li><a href="services.html" class="hover:text-white transition">Services</a></li>
+                        <li><a href="pricing.html" class="hover:text-white transition">Pricing</a></li>
+                        <li><a href="gift.html" class="hover:text-white transition">Gift Cards</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Company</h4>
+                    <ul class="space-y-2 text-sm text-slate-300">
+                        <li><a href="about.html" class="hover:text-white transition">About Us</a></li>
+                        <li><a href="contact.html" class="hover:text-white transition">Contact</a></li>
+                        <li><a href="blog.html" class="hover:text-white transition">Blog</a></li>
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-sm font-bold uppercase text-slate-500 mb-4">Support</h4>
+                    <ul class="space-y-2 text-sm text-slate-300">
+                        <li><a href="contact.html" class="hover:text-white transition">Help Center</a></li>
+                        <li><a href="terms.html" class="hover:text-white transition">Terms</a></li>
+                        <li><a href="privacy.html" class="hover:text-white transition">Privacy</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border-t border-slate-800 pt-8 flex flex-col md:flex-row justify-between items-center text-sm text-slate-500">
+                <p>&copy; 2026 Stackly Inc. All rights reserved.</p>
+                <div class="flex space-x-6 mt-4 md:mt-0">
+                    <i class="ph ph-twitter-logo text-xl hover:text-white cursor-pointer transition"></i>
+                    <i class="ph ph-instagram-logo text-xl hover:text-white cursor-pointer transition"></i>
+                </div>
+            </div>
+        </div>
     </footer>
 
 </body>
