--- a/pricing.html
+++ b/pricing.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stackly | Pricing Plans</title>
+    <title>Stackly | Pricing</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
+    <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <script>
         tailwind.config = {
@@ -19,6 +20,7 @@
     <script>
         if (localStorage.theme === 'dark' || (!('theme' in localStorage) && window.matchMedia('(prefers-color-scheme: dark)').matches)) document.documentElement.classList.add('dark');
         else document.documentElement.classList.remove('dark');
+
         if (localStorage.dir === 'rtl') document.documentElement.setAttribute('dir', 'rtl');
         else document.documentElement.setAttribute('dir', 'ltr');
 
@@ -48,27 +50,19 @@
                     <span class="font-bold text-2xl text-slate-900 dark:text-white">Stackly.</span>
                 </a>
 
-                <div class="hidden md:flex items-center gap-8">
-                    <div class="relative group">
-                        <button class="flex items-center gap-1 text-sm font-bold text-primary focus:outline-none">
-                            Home <i class="ph ph-caret-down"></i>
-                        </button>
-                        <div class="absolute top-full left-0 w-40 bg-white border border-gray-100 rounded-xl shadow-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all transform translate-y-2 group-hover:translate-y-0 dark:bg-slate-800 dark:border-slate-700">
-                            <a href="index.html" class="block px-4 py-3 text-sm font-medium hover:bg-gray-50 rounded-t-xl dark:text-gray-300 dark:hover:bg-slate-700">Home Style 1</a>
-                            <a href="home-2.html" class="block px-4 py-3 text-sm font-medium hover:bg-gray-50 rounded-b-xl dark:text-gray-300 dark:hover:bg-slate-700">Home Style 2</a>
-                        </div>
-                    </div>
-                    <a href="services.html" class="text-sm font-medium hover:text-primary transition">Services</a>
-                    <a href="pricing.html" class="text-sm font-medium hover:text-primary transition">Pricing</a>
-                    <a href="contact.html" class="text-sm font-medium hover:text-primary transition">Contact</a>
+                <div class="hidden md:flex items-center gap-8" id="desktop-menu">
+                    <a href="index.html" class="text-sm font-medium hover:text-primary transition dark:text-gray-300 dark:hover:text-white">Home</a>
+                    <a href="home-2.html" class="text-sm font-medium hover:text-primary transition dark:text-gray-300 dark:hover:text-white">Home 2</a>
+                    <a href="services.html" class="text-sm font-medium hover:text-primary transition dark:text-gray-300 dark:hover:text-white">Services</a>
+                    <a href="pricing.html" class="text-sm font-medium hover:text-primary transition dark:text-gray-300 dark:hover:text-white">Pricing</a>
+                    <a href="contact.html" class="text-sm font-medium hover:text-primary transition dark:text-gray-300 dark:hover:text-white">Contact</a>
                 </div>
 
                 <div class="hidden md:flex items-center gap-4">
-                    <button onclick="toggleTheme()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition" title="Toggle Theme">
-                        <i class="ph ph-moon dark:hidden"></i>
-                        <i class="ph ph-sun hidden dark:inline"></i>
+                    <button onclick="toggleTheme()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition">
+                        <i class="ph ph-moon dark:hidden"></i><i class="ph ph-sun hidden dark:inline"></i>
                     </button>
-                    <button onclick="toggleRTL()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition" title="Toggle RTL">
+                    <button onclick="toggleRTL()" class="p-2 rounded-full hover:bg-gray-100 text-slate-600 dark:text-gray-300 dark:hover:bg-slate-800 transition">
                         <i class="ph ph-translate"></i>
                     </button>
                     <div class="h-6 w-px bg-gray-200 dark:bg-slate-700"></div>
@@ -79,12 +73,10 @@
                 <button @click="mobileMenuOpen = !mobileMenuOpen" class="md:hidden text-2xl dark:text-white"><i class="ph ph-list"></i></button>
             </div>
         </div>
-
         <div x-show="mobileMenuOpen" class="md:hidden bg-white border-b border-gray-100 p-4 dark:bg-slate-800 dark:border-slate-700">
-            <a href="index.html" class="block py-2 font-bold text-primary">Home 1</a>
-            <a href="home-2.html" class="block py-2 font-medium dark:text-gray-300">Home 2</a>
+            <a href="index.html" class="block py-2 font-medium dark:text-gray-300">Home 1</a>
             <a href="services.html" class="block py-2 font-medium dark:text-gray-300">Services</a>
-            <a href="pricing.html" class="block py-2 font-medium dark:text-gray-300">Pricing</a>
+            <a href="pricing.html" class="block py-2 font-bold text-primary">Pricing</a>
             <div class="flex gap-4 mt-4 border-t border-gray-100 pt-4 dark:border-slate-700">
                 <button onclick="toggleTheme()" class="text-sm font-bold flex items-center gap-2 dark:text-white"><i class="ph ph-moon"></i> Theme</button>
                 <button onclick="toggleRTL()" class="text-sm font-bold flex items-center gap-2 dark:text-white"><i class="ph ph-translate"></i> RTL</button>
@@ -105,11 +97,6 @@
                 </div>
                 <p class="text-sm text-gray-500 mb-6 dark:text-gray-400">Perfect for casual tech enthusiasts.</p>
                 <a href="checkout.html" class="block w-full py-3 border-2 border-primary text-primary font-bold rounded-xl hover:bg-primary hover:text-white transition">Choose Starter</a>
-                <ul class="text-left mt-8 space-y-3 text-sm text-gray-600 dark:text-gray-400">
-                    <li class="flex gap-2"><i class="ph ph-check text-primary"></i> 3 Premium Items</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-primary"></i> Standard Shipping</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-primary"></i> Community Access</li>
-                </ul>
             </div>
 
             <div class="bg-dark text-white rounded-2xl p-8 border-2 border-primary shadow-2xl relative transform md:-translate-y-4 dark:bg-slate-900">
@@ -119,13 +106,7 @@
                     <span class="text-4xl font-extrabold">$49</span><span class="text-gray-400">/mo</span>
                 </div>
                 <p class="text-indigo-200 mb-6 text-sm">The best value for serious setups.</p>
-                <a href="checkout.html" class="block w-full py-3 bg-primary text-white font-bold rounded-xl hover:bg-indigo-600 transition shadow-lg shadow-indigo-500/50">Choose Enthusiast</a>
-                <ul class="text-left mt-8 space-y-3 text-gray-300 text-sm">
-                    <li class="flex gap-2"><i class="ph ph-check text-secondary"></i> 6 Premium Items</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-secondary"></i> Priority Free Shipping</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-secondary"></i> Early Access</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-secondary"></i> Exclusive Discord Role</li>
-                </ul>
+                <a href="checkout.html" class="block w-full py-3 bg-primary text-white font-bold rounded-xl hover:bg-indigo-600 transition shadow-lg">Choose Enthusiast</a>
             </div>
 
             <div class="bg-white rounded-2xl p-8 border border-gray-200 hover:border-primary transition shadow-sm hover:shadow-xl relative group dark:bg-slate-800 dark:border-slate-700">
@@ -135,11 +116,6 @@
                 </div>
                 <p class="text-sm text-gray-500 mb-6 dark:text-gray-400">For the ultimate tech hoarder.</p>
                 <a href="checkout.html" class="block w-full py-3 border-2 border-gray-200 text-slate-600 font-bold rounded-xl hover:border-dark hover:text-dark transition dark:border-slate-600 dark:text-gray-300 dark:hover:border-white dark:hover:text-white">Choose Collector</a>
-                <ul class="text-left mt-8 space-y-3 text-sm text-gray-600 dark:text-gray-400">
-                    <li class="flex gap-2"><i class="ph ph-check text-primary"></i> 10+ Premium Items</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-primary"></i> Next-Day Shipping</li>
-                    <li class="flex gap-2"><i class="ph ph-check text-primary"></i> 1-on-1 Setup Consultation</li>
-                </ul>
             </div>
 
         </div>
@@ -187,6 +163,8 @@
             </div>
         </div>
     </footer>
-<script src="nav-highlight.js"></script>
+
+    <script src="nav-highlight.js"></script>
+
 </body>
 </html>
